examples/test/testpolicy12974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12974
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key15: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value21
          key37: value42
          key21: value25
      podSelector:
        matchLabels:
          key29: value41
